@@ -38,7 +38,7 @@ module Brcobranca
         # @return [Stream]
         # @see http://wiki.github.com/shairontoledo/rghost/supported-devices-drivers-and-formats Veja mais formatos na documentação do rghost.
         # @see Rghost#modelo_generico Recebe os mesmos parâmetros do Rghost#modelo_generico.
-        def imprimir_lista(boletos, options={})
+        def lote(boletos, options={})
           modelo_generico_multipage(boletos, options)
         end
 
